--- a/src/components/SelectField/style.scss
+++ b/src/components/SelectField/style.scss
@@ -144,6 +144,14 @@ $base-class: 'select';
       padding: 8px 10px;
       align-items: center;
 
+      &-content {
+        overflow-x: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        max-width: calc(100% - 20px);
+        width: 100%;
+      }
+
       &--selected {
         color: $primary-color;
 
@@ -165,8 +173,6 @@ $base-class: 'select';
     visibility: hidden;
     transition: all 0.15s ease-in-out;
     fill: $primary-color;
-    width: 15px;
-    height: 15px;
     margin-left: auto;
     padding-left: 5px;
   }
@@ -180,6 +186,14 @@ $base-class: 'select';
     opacity: 0;
     visibility: hidden;
     transition: all 0.15s ease-in-out;
+    max-width: calc(100% - 44px);
+    width: 100%;
+
+    &-content {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
 
     &--visible {
       opacity: 1;
